compiler/testData/checkerWithErrorTypes/quick/FunctionCalleeExpressions.jet
namespace foo

fun Any.foo() : fun() : Unit {
  return {}
}

fun Any.foo1() : fun(i : Int) : Unit {
  return {}
}

fun foo2() : fun(i : fun()) : Unit {
  return {}
}

fun fooT1<T>(t : T) : fun() : T {
  return {t}
}

fun fooT2<T>() : fun(t : T) : T {
  return {it}
}

fun main(args : Array<String>) {
    args.foo()()
    args.foo1()<!NO_VALUE_FOR_PARAMETER!>()<!>
    <!UNRESOLVED_REFERENCE!>a<!>.foo1()()
    <!UNRESOLVED_REFERENCE!>a<!>.foo1()(<!UNRESOLVED_REFERENCE!>a<!>)

    args.foo1()(1)
    args.foo1()(<!TYPE_MISMATCH!>"1"<!>)
    <!UNRESOLVED_REFERENCE!>a<!>.foo1()("1")
    <!UNRESOLVED_REFERENCE!>a<!>.foo1()(<!UNRESOLVED_REFERENCE!>a<!>)

    foo2()({})
    foo2()<!TOO_MANY_ARGUMENTS!>{}<!>
    (foo2()){}
    (foo2())<!TYPE_MISMATCH!>{<!CANNOT_INFER_PARAMETER_TYPE!>x<!> => }<!>
    foo2()(<!TYPE_MISMATCH!>{<!CANNOT_INFER_PARAMETER_TYPE!>x<!> => }<!>)

    val a = fooT1(1)()
    a : Int

    val b = fooT2<Int>()(1)
    b : Int
    fooT2()(1) // : Any?

    <!CALLEE_NOT_A_FUNCTION!>1<!>()
    <!CALLEE_NOT_A_FUNCTION!>1<!>{}
    <!CALLEE_NOT_A_FUNCTION!>1<!>(){}
}